# gqkae-implementation

./: .gitignore  AGENTS.md  PLAN.md  README.md  index.html  pyproject.toml
assets/: dashboard.js  data.js  style.css
configs/: h4_cudaq_paper_like.yaml  h4_cudaq_smoke.yaml  h4_gate_match_acceptance.yaml  h4_gate_match_e1_baseline_excitation_full.yaml  h4_gate_match_e2_excitation_first_pauli_no_z.yaml  h4_gate_match_e3_pauli_evolution_cited_default.yaml  h4_mvp.yaml  h4_paper_fidelity.yaml  h4_paper_fidelity_cudaq_nvidia.yaml  h4_paper_fidelity_smoke.yaml  h4_paper_scale_gqe.yaml  h4_paper_scale_gqkae.yaml
data/: h4_cited_pauli_evolution_pool.json
docs/: CUDAQ_H4_FEASIBILITY_REPORT.md  FUTURE_WORK.md  H4_REPLICATION_STATUS.md
gqkae/: config.py  fermion_mapping.py  gate_counting.py  operator_pool.py  reporting.py
plans/: cudaq-paper-backend-match.md  cudaq-pes-five-trial-implementation.md  exact-decomposition-counting.md  h4-paper-circuit-experiments.md  h4-paper-gqkae-circuit-experiments.md
runs/: cudaq_h4_target_benchmark.json  cudaq_h4_target_benchmark.md  cudaq_target_diagnostics.json  h4_gate_match_acceptance_report.md  h4_gate_match_acceptance_summary.json  h4_paper_fidelity_sweep_seed_aggregate.json  h4_paper_fidelity_sweep_summary.json  h4_pes_cudaq_nvidia_report.md  h4_pes_cudaq_nvidia_runtime.jsonl  h4_pes_cudaq_nvidia_smoke_report.md  h4_pes_cudaq_nvidia_smoke_runtime.jsonl  h4_pes_cudaq_nvidia_smoke_summary.json  h4_pes_cudaq_nvidia_summary.json  h4_pes_paper_fidelity_summary_seed7.json
scripts/: benchmark_cudaq_h4_targets.py  build_site_data.py  (+17 more)
(+384 files in other folders)
